--- a/html/about.html
+++ b/html/about.html
@@ -1,3 +1,7 @@
+<!--
+  Isaac Livingston
+  12/16/2021
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +23,7 @@
   <link href='../https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="../css/clean-blog.min.css" rel="stylesheet">
+  <link href="../styles/clean-blog.min.css" rel="stylesheet">
 
   <a name="top"></a>
 </head>
@@ -39,7 +43,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../html/tableau.html">Tableau</a>
+            <a class="nav-link" href="./tableau.html">Tableau</a>
           </li>
         </ul>
       </div>
