--- a/html/tableau.html
+++ b/html/tableau.html
@@ -1,3 +1,7 @@
+<!--
+  Isaac Livingston
+  12/16/2021
+-->
 <!DOCTYPE html>
 <html lang="en"></html>
 
@@ -16,7 +20,7 @@
             <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../html/about.html">About</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="tableau.html">Tableau</a>
