--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+  Isaac Livingston
+  12/16/2021
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +24,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="styles/clean-blog.min.css" rel="stylesheet">
 
   <a name="top"></a>
 </head>
@@ -40,10 +45,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../startbootstrap-clean-blog-gh-pages/html/about.html">About</a>
+            <a class="nav-link" href="./html/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../startbootstrap-clean-blog-gh-pages/html/tableau.html">Tableau</a>
+            <a class="nav-link" href="./html/tableau.html">Tableau</a>
           </li>
         </ul>
       </div>
@@ -75,8 +80,8 @@
               Me 
             </h2>
           </a>
-          <img src="../startbootstrap-clean-blog-gh-pages/images/me.jpg" alt="Isaac Livingston Picture">
-          <img src="../startbootstrap-clean-blog-gh-pages/images/Bnglrplc.jpg" alt="Bangalore Palace Picture">
+          <img src="./images/me.jpg" alt="Isaac Livingston Picture">
+          <img src="./images/Bnglrplc.jpg" alt="Bangalore Palace Picture">
         <!-- Pager -->
       </div>
     </div>
